--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "arrowParens": "avoid",
   "trailingComma": "es5",
-  "singleQuote": true,
-  "semi": true
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": false
 }
